# opt-dz

./: README.md  identifier-problem.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: release.yml
docs/: USER_MANUAL.md
scripts/: seed.mjs
src/: index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/tests/: mod.rs  money_invariants.rs  payments.rs  sales_create.rs  stock.rs  support.rs  void_and_returns.rs
src/components/: app-sidebar.tsx  appointment-dialog.tsx  barcode-label-dialog.tsx  collected-chart.tsx  color-picker.tsx  color-swatch.tsx  confirm-dialog.tsx  delivery-dialog.tsx  error-state.tsx  facet-filters.tsx  help-hint.tsx  job-details-dialog.tsx  job-stage-stepper.tsx  layout.tsx  locale-provider.tsx  lock-button.tsx  manage-select.tsx  manager-password-section.tsx  new-job-dialog.tsx  notification-bell.tsx  onboarding.tsx  password-dialogs.tsx  patient-avatar.tsx  patient-form-panel.tsx  payment-dialog.tsx  prescription-dialog.tsx  product-attribute-fields.tsx  product-images-editor.tsx  product-variants-editor.tsx  profit-loss-card.tsx  prompt-dialog.tsx  require-unlock.tsx  return-dialog.tsx  search-select.tsx  stat-card.tsx  status-pill.tsx
src/db/: activity.ts  appointments.ts  attributes.ts  audit.ts  catalog.ts  claims.ts  colors.ts  expenses.ts  held-sales.ts  images.ts  jobs.ts  labels.ts  metrics.ts  notifications.ts  patients.ts  payers.ts  payments.ts  prescriptions.ts  products.ts  reports.ts  returns.ts  sales.ts  seed.ts  settings.ts  staff.ts  stock.ts  suppliers.ts  taxonomy.ts  variants.ts
src/hooks/: use-activity.ts  use-appointments.ts  use-attributes.ts  use-catalog.ts  use-claims.ts  use-colors.ts  use-expenses.ts  use-held-sales.ts  use-images.ts  use-inventory.ts  use-jobs.ts  use-mobile.ts  use-notifications.ts  use-patients.ts  use-payers.ts  use-reports.ts  use-returns.ts  use-sales.ts  use-settings.ts  use-suppliers.ts  use-taxonomy.ts  use-variants.ts
src/lib/: auth.ts  auto-backup.ts  csv.ts  (+22 more)
(+118 files in other folders)
