[package]
name = "opt-dz"
version = "0.1.0"
description = "Opt DZ"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "opt_dz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Skip Rust debug symbols in dev builds to keep the target/ small on this
# disk-constrained machine (debug symbols dominate Tauri debug build size).
[profile.dev]
debug = 0
strip = "debuginfo"

# Dumps the app's migrations as JSON so the TypeScript integration suite builds
# its schema from the same source the app runs. See src/bin/dump_migrations.rs.
[[bin]]
name = "dump-migrations"
path = "src/bin/dump_migrations.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.3"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
# Direct sqlx access so our atomic Rust commands can reuse the plugin's SQLite pool.
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-log = "2.8.0"
tauri-plugin-os = "2.3.2"
thiserror = "2.0.18"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
specta-typescript = "=0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-window-state = "2.4.1"

